# libr-sys

./: .gitignore  .travis.yml  Cargo.toml  Readme.md  build.rs
src/: lib.rs  libr.h
